# ProBioPred

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
ProBioPred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
probiopred/: csvToLibSVM.R  probiopred.py
probiopred/data/models/: bacillus.model  bifidobacterium.model  clostridium.model  enterococcus.model  lactobacillus.model  lactococcus.model  pediococcus.model
probiopred/data/pro/: The_Book.xlsx  bacillus.pfasta  bifidobacterium.pfasta  enterococcus.pfasta  escherichia.pfasta  lactococcus.pfasta  leuconostoc.pfasta  pediococcus.pfasta
probiopred/data/vfdb/: clostridium.pfasta  streptococcus.pfasta  vfdb_found_in_marketed_strains.txt
scripts/: proBioPred.py  proBioPred_batch_run.py
